fix: 💄 Remove layout wrap padding while we figure out full-bleed bg colors
WIP: the wrapper cannot have padding because some rows will have full-bleed bg colors. We'll probably need a utility class to provide the proper padding at smaller screen widths.

--- a/src/scss/base/_layout.scss
+++ b/src/scss/base/_layout.scss
@@ -12,7 +12,6 @@ footer {
 
 // ## Base Wrap
 .wp-site-blocks {
-	padding: 0 calc(var(--wp--custom--spacing--baseline)/ 2);
 	height: 100%;
 	display: flex;
 	flex-direction: column
